fix volume slider working while invisible

--- a/css/music-modal.css
+++ b/css/music-modal.css
@@ -266,8 +266,10 @@
     z-index: 9999;
     transition: opacity 0.3s ease;
     opacity: 0;
+    pointer-events: none;
     &.visible {
         opacity: 1;
+        pointer-events: visible;
     }
 }
 
